<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">Background Image</string>
    <string name="logo">Logo</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">CO-ED</string>
    <string name="next">Next</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the league.</string>
    <string name="get_started">GET STARTED</string>
    <string name="swishlogo">Swish Logo</string>
    <string name="background">background</string>
    <string name="baller">BALLER</string>
    <string name="beginner">BEGINNER</string>
    <string name="i_am_a">I am a:</string>
    <string name="finish">Finish</string>

</resources>